--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
     <div class="row">
         <div class="score"></div>
         <div class="winloss">
-            <p class="winlose"></p>
-            <p class="win"> </p>
-            <p class="loses"> </p>
+            <p class="winlose"> </p>
+            <p class="win">Wins: </p>
+            <p class="loses">Loss: </p>
         </div>
     </div>
     <div class="row">
